# ITLA-Bus-Bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
.github/: pull_request_template.md
app/: main.py
app/bot/: bot_discord.py
app/bot/cogs/: help_cog.py  register_cog.py  remider_task_cog.py  schedule.py  schedule_cog.py  scheduler_task_cog.py
app/bot/ui/schedule/: days_selects.py  modal.py  page_view.py  routes_selects.py
app/bot/ui/schedule_task/: ticket_view.py
app/bot/utils/: schedule_utils.py
app/data/: routes_data.py
app/db/: database.py  models.py  reposity.py
app/infrastructure/: database.py  models.py  reposity.py
app/infrastructure/repository/: schedule.py  stock_history.py  user.py
app/models/: purchase_model.py  schedule_days.py  schedule_days_model.py  ticket_model.py
app/schemas/: schedule_days_schema.py  ticket_schema.py
app/scraper/: fetch_route.py  routes.json  scrapper_ticket.py  test.py  ticket_dowloader.py
app/utils/: schedule_utils.py
