[project]
name = "itla-bus-bot"
version = "1.1.0"
description = "Bot de Discord para reserva automática de boletos del sistema de transporte del ITLA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]
